Fix overlay. It now covers everything.

--- a/Phoenix/css/site-layout.css
+++ b/Phoenix/css/site-layout.css
@@ -504,8 +504,10 @@ div.icon-label {
 }
 .signature-overlay {
     display: none;
-    position:absolute;
+    height: 100%;
+    position:fixed;
     top: 0; right: 0; left: 0; bottom: 0;
+    width: 100%;
     z-index:10;
 }
 #signature-container {
